--- a/school-portal/src/main/webapp/WEB-INF/web.xml
+++ b/school-portal/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,59 @@
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
+ <?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+                             http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
+         version="3.0">
+
   <display-name>Archetype Created Web Application</display-name>
+  
+  <!-- Student Servlet -->
+  <servlet>
+      <servlet-name>StudentServlet</servlet-name>
+      <servlet-class>com.learnersacademy.controller.StudentServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+      <servlet-name>StudentServlet</servlet-name>
+      <url-pattern>/students</url-pattern>
+  </servlet-mapping>
+  
+  <!-- Teacher Servlet -->
+  <servlet>
+      <servlet-name>TeacherServlet</servlet-name>
+      <servlet-class>com.learnersacademy.controller.TeacherServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+      <servlet-name>TeacherServlet</servlet-name>
+      <url-pattern>/teachers</url-pattern>
+  </servlet-mapping>
+
+  <!-- Class Servlet -->
+  <servlet>
+      <servlet-name>ClassServlet</servlet-name>
+      <servlet-class>com.learnersacademy.controller.ClassServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+      <servlet-name>ClassServlet</servlet-name>
+      <url-pattern>/classes</url-pattern>
+  </servlet-mapping>
+
+  <!-- Admin Servlet -->
+  <servlet>
+      <servlet-name>AdminServlet</servlet-name>
+      <servlet-class>com.learnersacademy.controller.AdminServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+      <servlet-name>AdminServlet</servlet-name>
+      <url-pattern>/admin</url-pattern>
+  </servlet-mapping>
+
+  <!-- Welcome file list -->
+  <welcome-file-list>
+      <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+
 </web-app>
+ 
