--- a/school-portal/pom.xml
+++ b/school-portal/pom.xml
@@ -30,6 +30,13 @@
       <scope>provided</scope>
     </dependency>
     
+    <dependency>
+    <groupId>jakarta.servlet</groupId>
+    <artifactId>jakarta.servlet-api</artifactId>
+    <version>4.0.4</version>
+    <scope>provided</scope>
+	</dependency>
+
     <!-- JSTL -->
     <dependency>
       <groupId>javax.servlet</groupId>
