--- a/school-portal/.classpath
+++ b/school-portal/.classpath
@@ -37,8 +37,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="C:/Users/liqui/Downloads/mysql-connector-j-8.4.0/mysql-connector-j-8.4.0/mysql-connector-j-8.4.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v10.1"/>
-	<classpathentry kind="lib" path="C:/Users/liqui/Downloads/taglibs-standard-1.2.5-source-release/taglibs-standard-1.2.5"/>
+	<classpathentry kind="lib" path="D:/Vince601/Documents/mysql-connector-j-8.4.0/mysql-connector-j-8.4.0/mysql-connector-j-8.4.0.jar"/>
+	<classpathentry kind="lib" path="D:/Vince601/Downloads/taglibs-standard-1.2.5-source-release/taglibs-standard-1.2.5"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
