--- a/school-portal/src/main/webapp/WEB-INF/web.xml
+++ b/school-portal/src/main/webapp/WEB-INF/web.xml
@@ -1,45 +1,43 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
+
     <servlet>
-        <servlet-name>AdminServlet</servlet-name>
-        <servlet-class>com.learnersacademy.controller.AdminServlet1</servlet-class>
+        <servlet-name>AdminS</servlet-name>
+        <servlet-class>com.learnersacademy.servlets.AdminS</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>AdminServlet</servlet-name>
+        <servlet-name>AdminS</servlet-name>
         <url-pattern>/admin</url-pattern>
     </servlet-mapping>
-    
+
     <servlet>
-        <servlet-name>ClassServlet</servlet-name>
-        <servlet-class>com.learnersacademy.controller.ClassServlet1</servlet-class>
+        <servlet-name>ClassS</servlet-name>
+        <servlet-class>com.learnersacademy.servlets.ClassS</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>ClassServlet</servlet-name>
-        <url-pattern>/class</url-pattern>
+        <servlet-name>ClassS</servlet-name>
+        <url-pattern>/classes</url-pattern>
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>StudentServlet</servlet-name>
-        <servlet-class>com.learnersacademy.controller.StudentServlet1</servlet-class>
+        <servlet-name>StudentS</servlet-name>
+        <servlet-class>com.learnersacademy.servlets.StudentS</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>StudentServlet</servlet-name>
-        <url-pattern>/student</url-pattern>
+        <servlet-name>StudentS</servlet-name>
+        <url-pattern>/students</url-pattern>
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>TeacherServlet</servlet-name>
-        <servlet-class>com.learnersacademy.controller.TeacherServlet1</servlet-class>
+        <servlet-name>TeacherS</servlet-name>
+        <servlet-class>com.learnersacademy.servlets.TeacherS</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>TeacherServlet</servlet-name>
-        <url-pattern>/teacher</url-pattern>
+        <servlet-name>TeacherS</servlet-name>
+        <url-pattern>/teachers</url-pattern>
     </servlet-mapping>
 
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
 </web-app>
