--- a/school-portal/pom.xml
+++ b/school-portal/pom.xml
@@ -66,6 +66,13 @@
             <artifactId>hibernate-annotations</artifactId>
             <version>3.5.6-Final</version>
         </dependency>
+        
+<dependency>
+    <groupId>taglibs</groupId>
+    <artifactId>standard</artifactId>
+    <version>1.1.2</version>
+</dependency>
+        
     </dependencies>
 
     <build>
