--- a/school-portal/src/main/webapp/WEB-INF/web.xml
+++ b/school-portal/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,24 @@
     </servlet-mapping>
     
     <servlet>
+    <servlet-name>RegisterServlet</servlet-name>
+    <servlet-class>com.learnersacademy.controller.RegisterServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+    <servlet-name>RegisterServlet</servlet-name>
+    <url-pattern>/register</url-pattern>
+</servlet-mapping>
+
+<servlet>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>com.learnersacademy.controller.LoginServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+</servlet-mapping>
+    
+    <servlet>
         <servlet-name>ClassServlet1</servlet-name>
         <servlet-class>com.learnersacademy.controller.ClassServlet1</servlet-class>
     </servlet>
