--- a/school-portal/src/main/webapp/WEB-INF/web.xml
+++ b/school-portal/src/main/webapp/WEB-INF/web.xml
@@ -3,33 +3,16 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
          http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+
     <servlet>
         <servlet-name>AdminServlet1</servlet-name>
         <servlet-class>com.learnersacademy.controller.AdminServlet1</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>AdminServlet1</servlet-name>
-        <url-pattern>/admin</url-pattern>
+        <url-pattern>/index</url-pattern>
     </servlet-mapping>
-    
-    <servlet>
-    <servlet-name>RegisterServlet</servlet-name>
-    <servlet-class>com.learnersacademy.controller.RegisterServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-    <servlet-name>RegisterServlet</servlet-name>
-    <url-pattern>/register</url-pattern>
-</servlet-mapping>
 
-<servlet>
-    <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>com.learnersacademy.controller.LoginServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-    <servlet-name>LoginServlet</servlet-name>
-    <url-pattern>/login</url-pattern>
-</servlet-mapping>
-    
     <servlet>
         <servlet-name>ClassServlet1</servlet-name>
         <servlet-class>com.learnersacademy.controller.ClassServlet1</servlet-class>
@@ -57,8 +40,25 @@
         <url-pattern>/teachers</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>com.learnersacademy.controller.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>RegisterServlet</servlet-name>
+        <servlet-class>com.learnersacademy.controller.RegisterServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RegisterServlet</servlet-name>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+
     <welcome-file-list>
-        <welcome-file>login.jsp</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
-
